--- a/index.html
+++ b/index.html
@@ -34,3 +34,6 @@
                     <li><a href="https://www.facebook.com/share/1A9wtwhZhA/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
                     <li><a href="https://www.instagram.com/tomasesteban2008?igsh=cDJxcWFsMHNoaGJo" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                     <li><a href="https://github.com/TEstebanGQ" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/tomas-esteban-gonzalez-quintero-0bb97b344/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                </ul>
+            </div>
