feat: :sparkles: Se coloca el fondo al video

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <h2>Video de presentación</h2>
             <video controls width="100%" poster="images/fondovideo.png">
-            <source src="video/videopresentacion.mp4" type="video/mp4">
+            <source src="video/videopresentacion.mp4" type="videopresentacion/mp4">
             Tu navegador no soporta el video.
             </video>
         </div>
